--- a/src/components/Product/ProductDetailsMain.css
+++ b/src/components/Product/ProductDetailsMain.css
@@ -10,15 +10,26 @@
 .details-main-secondary-size {
   display: inline-flex;
   align-items: center;
+  font-weight: 900;
   justify-content: center;
   list-style: none;
-  margin: 0em .5em;
+  margin: 0em .6em;
   height: 2em;
-  width: 2em;
-  border-radius: 50%;
-  border: 2px solid gray;
-  box-shadow: var(--shadow-2p);
+  width: auto;
+  border: 1px solid #cccccc;
+  border-radius: 8px;
   cursor: pointer;
+  transition: border 200ms linear;
+  padding: 8px;
+  /*box-shadow: 0 0 3px 1px #cccccc;*/
+  box-shadow: var(--shadow-2p);
+}
+.details-main-secondary-size--selected {
+  border: 1px solid #898989;
+  background-color: #898989;
+  color: white;
+  transition: border 200ms linear, background 300ms ease-in;
+  box-shadow: var(--shadow-4p);
 }
 
 .details-main-primay {
@@ -40,9 +51,6 @@
   display: flex;
 }
 
-.details-main-secondary-size--selected {
-  border: 2px solid royalblue;
-}
 /*for mobile*/
 @media screen and (max-width: 600px) {
   .details-sizes {
